--- a/Src/sln/AAV.WpfTheme.Model.App.csproj
+++ b/Src/sln/AAV.WpfTheme.Model.App.csproj
@@ -4,11 +4,11 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ScSv\Src\AlexPi.Scr\AAV.Sys\AAV.Sys.csproj" />
-    <ProjectReference Include="..\..\..\ScSv\Src\AlexPi.Scr\AAV.WPF\AAV.WPF.csproj" />
+    <ProjectReference Include="..\..\..\AAV.Shared\Src\Net6.0\AAV.WPF\AAV.WPF.csproj" />
   </ItemGroup>
 
 </Project>
